--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,7 @@ html {
 
 .image-container img {
   display: block;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 760px) {
@@ -77,7 +78,7 @@ header .mobile {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 768px) {
   header .desktop {
     display: none;
   }
@@ -168,7 +169,7 @@ header .mobile {
   background-image: url("../images/banner-landingpage.jpg");
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 768px) {
   #sign-up-section {
     align-items: center;
     justify-content: center;
@@ -230,12 +231,14 @@ header .mobile {
   background-color: white;
 }
 
-.image-container {
-  width: 90%;
+.feature .image-container {
+  width: 95%;
   height: 65%;
   margin: 0 auto;
-  display: block;
-  max-width: 100%;
+}
+
+.feature .content {
+  padding: 2.5rem 0;
 }
 
 .feature h2 {
@@ -254,14 +257,16 @@ header .mobile {
 
 @media only screen and (max-width: 890px) {
   .feature h2 {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     line-height: 1.3;
-    font-weight: normal;
+    font-weight: bold;
+    text-align: left;
   }
 
   .feature h3 {
     font-size: .875rem;
     line-height: 1.4;
+    text-align: left;
   }
 }
 
@@ -275,6 +280,15 @@ header .mobile {
     margin: 0;
     padding: 1.25rem 1rem 0 1rem;
   }
+  .feature h2 {
+    font-weight: normal;
+    text-align: center;
+  }
+
+  .feature h3 {
+    text-align: center;
+  }
+
 }
 
 /* Filters Section */
@@ -306,13 +320,12 @@ header .mobile {
   max-width: 100%;
   padding: 0 1%;
   display: flex;
+  height: 300px;
 }
 
 #filters-section .image-container {
   display: block;
-  max-width: 100%;
-  overflow:
-  
+  width: 100%;
 }
 
 @media only screen and (max-width: 760px) {
@@ -338,6 +351,7 @@ header .mobile {
 
   #filters-section .images-container {
     padding: 0;
+    margin-bottom: 0;
   }
 
   #filters-section .extra {
@@ -351,11 +365,11 @@ header .mobile {
   background-color: #f3f3f3;
 }
 
-#quotes-section content {
+#quotes-section .content {
   padding: 5rem 0;
 }
 
-#quotes-section quote {
+#quotes-section .quote {
   padding-right: 1.875rem;
   font-family: "Palatino", serif;
   font-size: 1.875rem;
@@ -364,21 +378,21 @@ header .mobile {
   color: #4a4a4a;
 }
 
-#quotes-section quote-citation {
+#quotes-section .quote-citation {
   height: 1.875rem;
 }
 
 @media only screen and (max-width: 760px) {
-  #quotes-section content {
+  #quotes-section .content {
     padding: 1.875rem .625rem;
   }
 
-  #quotes-section quote {
+  #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
   }
 
-  #quotes-section quote-citation {
+  #quotes-section .quote-citation {
     display: block;
     padding-top: 1rem;
     margin: auto;
